# ordermesh

./: .env.example  .gitattributes  .gitignore  Caddyfile  DEPLOY.md  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  index.html  requirements-dev.txt
.github/workflows/: ci.yml
infra/postgres/: init-databases.sql
services/gateway/: Dockerfile  entrypoint.sh  requirements.txt
services/gateway/app/: config.py  database.py  dependencies.py  main.py  models.py  proxy.py  routes_auth.py  routes_proxy.py  schemas.py
services/gateway/tests/: conftest.py  test_auth.py  test_proxy.py
services/inventory/: Dockerfile  entrypoint.sh
services/inventory/alembic/: env.py
services/inventory/app/: config.py  consumers.py  database.py  main.py  models.py  routes.py  schemas.py  service.py
services/inventory/tests/: conftest.py  test_consumers.py  test_routes.py  test_service.py
services/notification/: Dockerfile  alembic.ini  entrypoint.sh  requirements.txt
services/notification/app/: config.py  consumers.py  main.py  models.py  routes.py  schemas.py  service.py
services/notification/tests/: conftest.py  test_service.py
services/order/: Dockerfile  entrypoint.sh
services/shipping/: Dockerfile  entrypoint.sh
shared/: pyproject.toml
shared/shared/: __init__.py  auth.py  cache.py  db.py  logging.py  middleware.py  security.py
shared/shared/events/: __init__.py  broker.py  consumer.py  schema.py
shared/tests/: test_auth.py  test_broker.py  test_cache.py  test_consumer.py  test_logging.py  test_middleware.py  test_schema.py  test_security.py
(+27 files in other folders)
