[project]
name = "shared"
version = "0.1.0"
description = "Shared library for the logistics platform (events, auth, db, cache, logging)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
    "aio-pika>=9.4",
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "starlette>=0.36",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
